# RoboOrchard

./: .clinerules  .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml
projects/HoloBrain/: .gitignore  CHANGELOG.md  README.md
projects/HoloBrain/app/: gen_inference_app_launch_config.py  launch_inference_app.sh
projects/HoloBrain/dev/: Dockerfile  build.sh
projects/HoloBrain/docs/: .gitignore  Makefile
projects/HoloBrain/handeye_calib/: README.md  gen_handeye_calib_config.py  launch_handeye_calib.sh
projects/HoloBrain/inference/: README.md  gen_async_config.py  gen_sync_config.py  launch_async_infer.sh  launch_sync_infer.sh
projects/HoloBrain/launch/: .gitignore  start.sh  (+1 more)
python/robo_orchard_inference_app/: LICENSE  Makefile  README.md  pyproject.toml  setup.py
python/robo_orchard_inference_app/docs/: Makefile  conf.py
python/robo_orchard_inference_app/robo_orchard_inference_app/: __init__.py  app.py  cli.py  config.py  logger.py  ros_bridge.py  state.py  ui.py  utils.py
python/robo_orchard_inference_app/robo_orchard_inference_app/components/: __init__.py  edit_episode_meta.py  foxglove.py  log.py  main_control.py  mixin.py  sidebar.py  task_config.py
python/robo_orchard_inference_app/tests/: .coveragerc
python/robo_orchard_inference_app/tests/python/test_robo_orchard_inference_app/: test_basic.py  test_edit_episode_meta_handeye.py  test_generated_launch_config_contract.py  test_generated_launch_integration.py  test_main_control_node_status.py  test_main_control_reset.py  test_ros_bridge_control_guards.py  test_ros_bridge_inference_node.py  test_ros_bridge_static_transforms.py  test_task_config_static_transform_ui.py
ros2_package/: .gitignore  Makefile  README.md  requirements.txt
ros2_package/robo_orchard_data_msg_ros2/: CMakeLists.txt  package.xml
ros2_package/robo_orchard_data_ros2/: LICENSE  README.md  package.xml  setup.py
ros2_package/robo_orchard_data_ros2/robo_orchard_data_ros2/codec/image/: codec.py  config.py  encoder_node.py
ros2_package/robo_orchard_data_ros2/robo_orchard_data_ros2/mcap/: config.py  service_node.py  utils.py
ros2_package/robo_orchard_data_ros2/robo_orchard_data_ros2/tf/: config.py  node.py  runtime.py
ros2_package/robo_orchard_data_ros2/test/: test_mcap_service_node.py  test_tf_node_static_semantics.py  test_tf_runtime.py  test_tf_static_republish_integration.py
ros2_package/robo_orchard_deploy_ros2/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
ros2_package/robo_orchard_handeye_calib_ros2/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
ros2_package/robo_orchard_image_tools/: CMakeLists.txt  README.md  package.xml
ros2_package/robo_orchard_image_tools/src/: compressed_image_encoder.cpp
ros2_package/robo_orchard_pico_msg_ros2/: CMakeLists.txt  package.xml
ros2_package/robo_orchard_piper_msg_ros2/: CMakeLists.txt  README.md  package.xml
ros2_package/robo_orchard_piper_ros2/: MANIFEST.in  README.md  package.xml  setup.cfg  setup.py
ros2_package/robo_orchard_teleop_msg_ros2/: CMakeLists.txt  package.xml
ros2_package/robo_orchard_teleop_ros2/: MANIFEST.in  package.xml  setup.cfg  setup.py
scm/: requirements.txt
(+79 files in other folders)
