<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_orchard_data_ros2</name>
  <version>0.0.0</version>
  <description>ROS2 package for data acquisition and processing in robotic systems, providing codec modules for image encoding, MCAP recording, and TF transformation handling for sensor data.</description>
  <maintainer email="hongyu.xie@horizon.auto">Hongyu Xie</maintainer>
  <license>Apache-2.0</license>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robo_orchard_data_msg_ros2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
